--- a/racadm/Dockerfile
+++ b/racadm/Dockerfile
@@ -1,8 +1,12 @@
 FROM centos:6.6
 
-RUN yum install wget perl dmidecode -y
+RUN yum install -y \
+      wget \
+      perl \
+      dmidecode
 
-RUN wget -q -O - http://linux.dell.com/repo/hardware/latest/bootstrap.cgi | bash && yum -y install srvadmin-idrac
+RUN wget -q -O - http://linux.dell.com/repo/hardware/latest/bootstrap.cgi | bash \
+    && yum -y install srvadmin-idrac
 
 COPY entrypoint.sh /
 
