Add missing texlive packages for pdf creation

--- a/texlive/Dockerfile
+++ b/texlive/Dockerfile
@@ -4,8 +4,15 @@ MAINTAINER Chris Clonch <chris@theclonchs.com>
 RUN apt-get update -y \
     && apt-get install --no-install-recommends -y \
        chktex \
+       ghostscript \
        latexmk \
+       psutils \
+       tex-gyre \
        texlive \
+       texlive-fonts-extra \
+       texlive-fonts-extra-links \
+       texlive-fonts-recommended \
+       texlive-font-utils \
        texlive-formats-extra \
        texlive-lang-english \
        texlive-latex-extra \
